# pocket-cli

./: .gitignore  .pocketignore  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README  README.md  getting started.md  ideas.md  start-rust.pocket  test_hook.sh  vcs-spec.md
.github/: PULL_REQUEST_TEMPLATE.md  RELEASE_TEMPLATE.md  labeler-config.yml  pr-labeler-config.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: flare.yml  labeler.yml  release.yml  rust-ci.yml  test.yml
.pocket/: HEAD  config.toml
benches/: performance_benchmark.rs
docs/: card-development-guide.md  cards.md  commands.md  hooks.md  installation.md  version-control.md
examples/: README.md  python-project.pocket  read.md  simple-python-setup.sh  test.sh
src/: cli.rs  config.rs  errors.rs  lib.rs  logging.rs  main.rs  version.rs
src/cards/: backup.rs  blend.rs  core.rs  mod.rs  snippet.rs
src/cli/: handler.rs  mod.rs
src/commands/: blend.rs  mod.rs
src/models/: mod.rs
src/plugins/: backup.rs  mod.rs
src/search/: mod.rs
src/storage/: mod.rs
src/utils/: clipboard.rs  mod.rs  summarization.rs
src/vcs/: commands.rs  diff.rs  graph.rs  merge.rs  mod.rs  objects.rs  pile.rs  remote.rs  repository.rs  shove.rs  timeline.rs
tests/: README.md  lib.rs  mod.rs
tests/common/: mod.rs
tests/integration/: cli_test.rs  vcs_snippets_integration_test.rs
tests/plugins/: backup_test.rs  plugin_test.rs
tests/unit/: repository_test.rs  snippet_test.rs
tests/unit/snippets/: snippet_test.rs  storage_test.rs
tests/unit/vcs/: ignore_test.rs  repository_test.rs
