[package]
name = "pocket-cli"
version = "0.5.2"
edition = "2021"
description = "A CLI tool for saving, organizing, and retrieving code snippets with integrated version control"
authors = ["frgmt0"]
license = "MIT"

# Define the binary name as 'pocket' instead of the default 'pocket-cli'
[[bin]]
name = "pocket"
path = "src/bin/pocket.rs"

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
anyhow = "1.0"
thiserror = "2.0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
regex = "1.10.2"
walkdir = "2.4.0"
glob = "0.3"
hostname = "0.4.0"
url = "2.4.1"
tempfile = "3.8.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
owo-colors = "4.2"
dialoguer = "0.11"
indicatif = "0.17"
similar = "2.4"
colored = "2.0"
dirs = "5.0"
sha2 = "0.10"

[dev-dependencies]
tempfile = "3.8.0"
assert_fs = "1.0"
predicates = "3.0"
