[package]
name = "pocket-cli"
version = "1.0.2"
edition = "2021"
description = "A CLI tool for saving, organizing, and retrieving code snippets with integrated version control"
authors = ["frgmt0"]
license = "MIT"

[lib]
name = "pocket_cli"
path = "src/lib.rs"

[[bin]]
name = "pocket"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
regex = "1.10.2"
walkdir = "2.4.0"
glob = "0.3"
hostname = "0.4.0"
url = "2.4.1"
tempfile = "3.8.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
owo-colors = "4.2"
dialoguer = "0.11"
indicatif = "0.17"
similar = "2.4"
colored = "3.0.0"
dirs = "6.0.0"
sha2 = "0.10"
rust-stemmers = "1.2.0"
log = "0.4"
env_logger = "0.10"
once_cell = "1.18"
lazy_static = "1.4.0"
rust-bert = { version = "0.21.0", optional = true }
rust_tokenizers = { version = "8.1.0", optional = true }
tch = { version = "0.13.0", optional = true }
libloading = "0.8"

[features]
default = []
ml-summarization = ["rust-bert", "rust_tokenizers", "tch"]

[dev-dependencies]
tempfile = "3.8.0"
assert_fs = "1.0"
predicates = "3.0"
test-case = "3.3"
mockall = "0.13.1"
rstest = "0.25.0"
criterion = "0.5"
proptest = "1.4"
rand = "0.9.0"
